fix: Fix objectMode stream support

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/duplexify": "^3.6.0",
     "@types/node": "^13.9.8",
     "@types/once": "^1.4.0",
+    "@types/readable-stream": "^2.3.5",
     "@types/tape": "^4.2.34",
     "@types/tape-async": "^2.3.0",
     "duplexify": "^4.1.1",
@@ -34,6 +35,7 @@
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
     "readable-error": "^1.0.0",
+    "readable-stream": "^3.6.0",
     "tap": "^14.10.7",
     "tape": "^4.13.2",
     "tape-async": "^2.3.0",
