--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Call methods on an object over RPC",
   "main": "index.js",
   "scripts": {
-    "test": "tap",
+    "test": "tap --no-check-coverage",
     "coverage": "mkdir -p coverage && tap --coverage-report=text-lcov > ./coverage/lcov.info",
     "type": "tsc",
     "format": "prettier --write ."
@@ -18,35 +18,34 @@
   "license": "ISC",
   "dependencies": {
     "@msgpack/msgpack": "^1.12.1",
-    "duplexify": "^4.1.1",
-    "is-stream": "^2.0.0",
+    "duplexify": "^4.1.2",
+    "is-stream": "^2.0.1",
     "length-prefixed-stream": "^2.0.0",
-    "p-timeout": "^3.2.0",
-    "serialize-error": "^6.0.0",
-    "through2": "^3.0.1",
+    "p-timeout": "^4.1.0",
+    "serialize-error": "^8.1.0",
+    "through2": "^4.0.2",
     "validate.io-array-like": "^1.0.2"
   },
   "devDependencies": {
-    "@types/concat-stream": "^1.6.0",
+    "@types/concat-stream": "^1.6.1",
     "@types/duplexify": "^3.6.0",
     "@types/node": "^13.9.8",
     "@types/once": "^1.4.0",
-    "@types/pump": "^1.1.0",
-    "@types/readable-stream": "^2.3.5",
+    "@types/pump": "^1.1.1",
+    "@types/readable-stream": "^2.3.11",
     "@types/tape": "^4.2.34",
-    "@types/tape-async": "^2.3.0",
-    "@types/through2": "^2.0.34",
+    "@types/tape-async": "^2.3.1",
+    "@types/through2": "^2.0.36",
     "husky": "^4.2.5",
-    "into-stream": "^5.1.1",
+    "into-stream": "^6.0.0",
     "native-duplexpair": "^1.0.0",
     "p-is-promise": "^3.0.0",
-    "prettier": "^2.0.5",
-    "pretty-quick": "^2.0.1",
+    "prettier": "^2.4.1",
+    "pretty-quick": "^3.1.1",
     "readable-error": "^1.0.0",
     "readable-stream": "^3.6.0",
-    "tap": "^14.10.7",
-    "tape": "^4.13.2",
+    "tap": "^15.0.10",
     "tape-async": "^2.3.0",
-    "typescript": "^3.8.3"
+    "typescript": "^4.4.3"
   }
 }
