--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "readable-stream": "^3.6.0",
     "tap": "^15.0.10",
     "tape-async": "^2.3.0",
+    "type-fest": "^2.3.4",
     "typescript": "^4.4.3"
   }
 }
