--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.2.0",
   "description": "Call methods on an object over RPC",
   "main": "index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "test": "tap --no-check-coverage test/**/*.test.js",
     "coverage": "mkdir -p coverage && tap --no-check-coverage --coverage-report=text-lcov > ./coverage/lcov.info",
-    "type": "tsc",
-    "format": "prettier --write ."
+    "type": "tsc --noEmit",
+    "format": "prettier --write .",
+    "prepack": "tsc --outDir dist --allowJs --emitDeclarationOnly --declaration index.js"
   },
   "husky": {
     "hooks": {
