--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "is-stream": "^2.0.1",
     "length-prefixed-stream": "^2.0.0",
     "p-timeout": "^4.1.0",
+    "pump": "^3.0.0",
     "serialize-error": "^8.1.0",
     "through2": "^4.0.2",
     "validate.io-array-like": "^1.0.2"
