chore: fix tsconfig.json warnings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
     "declaration": true,
     "outDir": "./dist",
     "typeRoots": ["types", "node_modules/@types"]
-  }
+  },
+  "exclude": ["./dist/**/*"]
 }
