--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@msgpack/msgpack": "^1.12.1",
+    "assert": "^2.0.0",
     "duplexify": "^4.1.2",
     "is-stream": "^2.0.1",
     "length-prefixed-stream": "^2.0.0",
