--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@msgpack/msgpack": "^1.12.1",
+    "assert": "^2.0.0",
     "duplexify": "^4.1.2",
     "is-stream": "^2.0.1",
     "length-prefixed-stream": "^2.0.0",
@@ -32,10 +33,10 @@
   "devDependencies": {
     "@types/concat-stream": "^1.6.1",
     "@types/duplexify": "^3.6.0",
-    "@types/node": "^13.9.8",
+    "@types/node": "^18.16.19",
     "@types/once": "^1.4.0",
     "@types/pump": "^1.1.1",
-    "@types/readable-stream": "^2.3.11",
+    "@types/readable-stream": "^2.3.15",
     "@types/tape": "^4.2.34",
     "@types/tape-async": "^2.3.1",
     "@types/through2": "^2.0.36",
@@ -46,11 +47,11 @@
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
     "readable-error": "^1.0.0",
-    "readable-stream": "^3.6.0",
+    "readable-stream": "^3.6.2",
     "tap": "^15.0.10",
     "tape-async": "^2.3.0",
-    "type-fest": "^2.3.4",
-    "typescript": "^4.4.3"
+    "type-fest": "^3.12.0",
+    "typescript": "^5.1.6"
   },
   "files": [
     "server.js",
