--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,17 @@
     "module": "commonjs",
     "target": "es2018",
     "allowSyntheticDefaultImports": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
+    "strict": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "allowJs": true,
     "checkJs": true,
     "declaration": true,
-    "outDir": "./dist",
+    "emitDeclarationOnly": true,
+    "declarationMap": true,
+    "declarationDir": "dist",
     "typeRoots": ["types", "node_modules/@types"]
   },
+  "files": ["index.js"],
   "exclude": ["./dist/**/*"]
 }
