--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,5 @@
     "declarationDir": "dist",
     "typeRoots": ["types", "node_modules/@types"]
   },
-  "files": ["index.js"],
-  "exclude": ["./dist/**/*"]
+  "files": ["index.js"]
 }
