--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@msgpack/msgpack": "^1.12.1",
     "@types/node": "^18.16.19",
     "duplexify": "^4.1.2",
+    "eventemitter3": "^5.0.1",
     "is-stream": "^2.0.1",
     "length-prefixed-stream": "^2.0.0",
     "p-timeout": "^4.1.0",
