--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rpc-reflector",
-  "version": "1.3.9-rc.2",
+  "version": "1.3.9",
   "description": "Call methods on an object over RPC",
   "main": "index.js",
   "types": "index.d.ts",
