--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,24 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es2018",
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
+    "target": "es2022",
+    "lib": ["es2022", "DOM"],
+
     "allowJs": true,
     "checkJs": true,
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "typeRoots": ["types", "node_modules/@types"]
+    "module": "NodeNext",
+    "moduleDetection": "force",
+    "resolveJsonModule": true,
+    "verbatimModuleSyntax": true,
+    "noEmit": true,
+
+    "strict": true,
+    "noImplicitOverride": true,
+    "forceConsistentCasingInFileNames": true,
+
+    "skipLibCheck": true,
+    "typeRoots": ["types", "node_modules/@types"],
+    "rootDir": "."
   },
-  "files": ["index.js"]
+  "include": ["**/*"],
+  "exclude": ["node_modules"]
 }
