feat: add logger option
Supports passing a logger that implements the pino interface. For improved debug of rpc message errors.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "forceConsistentCasingInFileNames": true,
 
     "skipLibCheck": true,
-    "rootDir": "."
+    "rootDir": ".",
+    "typeRoots": ["types", "node_modules/@types"]
   },
   "include": ["**/*"],
   "exclude": ["node_modules"]
