--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.19.115",
+    "abstract-logging": "^2.0.1",
     "ensure-error": "^4.0.0",
     "eventemitter3": "^5.0.1",
     "is-stream": "^4.0.1",
@@ -50,6 +51,8 @@
     "globals": "^16.3.0",
     "husky": "^9.1.7",
     "into-stream": "^8.0.1",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
     "prettier": "^3.6.2",
     "rimraf": "^5.0.10",
     "tape": "^5.9.0",
