--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ensure-error": "^4.0.0",
     "eventemitter3": "^5.0.1",
     "is-stream": "^4.0.1",
+    "p-defer": "^4.0.1",
     "p-timeout": "^6.1.4",
     "readable-stream": "^4.7.0",
     "serialize-error": "^12.0.0"
