--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
   "version": "2.0.0",
   "description": "Call methods on an object over RPC",
   "type": "module",
+  "main": "index.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./index.js",
       "default": "./index.js"
     },
-    "./client": {
-      "types": "./dist/lib/client.d.ts",
-      "import": "./lib/client.js",
-      "default": "./lib/client.js"
+    "./client.js": {
+      "types": "./dist/client.d.ts",
+      "default": "./client.js"
     },
-    "./server": {
-      "types": "./dist/lib/server.d.ts",
-      "import": "./lib/server.js",
-      "default": "./lib/server.js"
+    "./server.js": {
+      "types": "./dist/server.d.ts",
+      "default": "./server.js"
     }
   },
   "scripts": {
@@ -63,6 +62,8 @@
   "files": [
     "CHANGELOG.md",
     "index.js",
+    "client.js",
+    "server.js",
     "lib/",
     "dist/",
     "examples/"
